...
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="#1"
            />

        <TextView
            android:id="@+id/revenue"
            style="@style/TitleItemBanner"
            android:layout_width="wrap_content"
...
